# crypto-wallet

./: .gitignore  README.md
safir/: package.json
safir/src-tauri/: Cargo.toml  tauri.conf.json
safir/src-tauri/src/: main.rs
wallet-core/: Cargo.toml
wallet-core/api/: Cargo.toml
wallet-core/api/src/: client.rs  lib.rs  solana.rs
wallet-core/cli/: Cargo.toml
wallet-core/cli/src/: cli.rs  main.rs
wallet-core/keypair/: Cargo.toml
wallet-core/keypair/src/: account.rs  bitcoin.rs  lib.rs  solana.rs
wallet-core/mnemonic/: Cargo.toml
wallet-core/mnemonic/src/: lib.rs
wallet-core/model/: Cargo.toml
wallet-core/model/src/: account.rs
wallet-core/types/: Cargo.toml
wallet-core/types/src/: constants.rs  lib.rs  shared.rs
wallet-core/wallet/: Cargo.toml
wallet-core/wallet/src/: account.rs  keypair.rs  lib.rs  wallet.rs
