[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.83.0"
repository = "https://github.com/volodymyrd/crypto-wallet"

[workspace]
resolver = "2"
members = ["api", "cli", "keypair", "mnemonic", "types", "wallet"]

[workspace.dependencies]
bs58 = "0.5"
clap = { version = "4.5", features = ["derive"] }
ed25519-dalek = "2"
solana-client = "2"
solana-sdk = "2"
tiny-bip39 = "2"

# internal deps
api = { path = "api" }
keypair = { path = "keypair" }
mnemonic = { path = "mnemonic" }
types = { path = "types" }
wallet = { path = "wallet" }
